Fix colorscheme on mobile

--- a/application/public/stylesheets/screen.css
+++ b/application/public/stylesheets/screen.css
@@ -32,7 +32,7 @@ input {appearance:none; -moz-appearance:none; -webkit-appearance:none;}
 /* GENERAL */
 html, body {height:100%; background:#f0f1f2;}
 html.device-smartphone,
-.device-smartphone body {background:#024a67;}
+.device-smartphone body {background:#f0f1f2;}
 
 .device-desktop {overflow-y:scroll;}
 
@@ -50,7 +50,7 @@ html.device-smartphone,
     #header .btn-nav,
     #header .logo-small {display:none;}
 
-    .device-smartphone #header {padding:10px; height:30px; background:url('../img/bgr-header-small.png') no-repeat center center #025d80; background-size:320px 50px;}
+    .device-smartphone #header {padding:10px; height:53px; background:url('../img/bgr-header-small.png') no-repeat center center #333; background-size:320px 50px;}
     .device-smartphone #header .btn-yes {display:none;}
     .device-smartphone #header .btn-yes-small {position:absolute; display:block; top:28px; right:10px; z-index:170;}
     .device-smartphone #header .btn-nav {position:absolute; display:block; top:5px; left:5px; z-index:180;}
@@ -91,12 +91,12 @@ html.device-smartphone,
     .device-ipad.device-landscape #navigation .nav-ico {top:18px;}
 
     .device-smartphone #navigation {display:none; width:108px; z-index:50; padding-bottom:0; margin-bottom:0; background:none; -webkit-transform-style:flat; -webkit-backface-visibility:hidden; -webkit-perspective:800;}
-    .device-smartphone #navigation li a {padding:55px 15px 20px; margin:0; font-size:15px; line-height:14px; color:#FFF; border-bottom:1px solid #297593;}
+    .device-smartphone #navigation li a {padding:55px 15px 20px; margin:0; font-size:15px; line-height:14px; color:#FFF; border-bottom:1px solid #CFB539;}
     .device-smartphone #navigation li.selected a {border-color:#f0f1f2 !important;}
     .device-smartphone #navigation .nav-ico {position:absolute; top:15px; left:50%; margin-left:-17px;}
     .device-smartphone #navigation .nav-arrow {display:none !important;}
-    .device-smartphone #navigation li {background:#333; border-right:2px solid #024a67;}
-    .device-smartphone #navigation li.active {background:#035270;}
+    .device-smartphone #navigation li {background:#333; border-right:2px solid #CFB539;}
+    .device-smartphone #navigation li.active {background:#CFB539;}
     .device-smartphone #navigation li.selected {background:#CFB539; border-right:2px solid #CFB539; margin-right:0;}
     .device-smartphone #navigation li .nav-ico {display:none;}
     .device-smartphone #navigation li .nav-ico.on {display:inline-block;}
